--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -158,7 +158,7 @@ jobs:
         fetch-depth: 0
 
     - name: Install
-      run: brew install qt gdb
+      run: brew install qt@5 gdb
 
     - name: Build
       run: |
