--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         wget "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" -P ~/
         chmod +x ~/linuxdeployqt-continuous-x86_64.AppImage
 
-    - name: Build
+    - name: Build and test
       run: |
         mkdir build
         cd build
@@ -53,7 +53,7 @@ jobs:
         cp app/resources/wpanda.png build/app/wpanda.png
         ~/linuxdeployqt-continuous-x86_64.AppImage build/app/wpanda -appimage 
 
-    - name: Upload WiredPanda AppImage
+    - name: Deploy
       uses: actions/upload-artifact@v3
       with:
         name: WiredPanda Linux (64-bit) AppImage
@@ -79,7 +79,7 @@ jobs:
         version: 5.15.2
         modules: qtcharts
 
-    - name: Build
+    - name: Build and test
       run: |
         mkdir build
         cd build
@@ -87,7 +87,7 @@ jobs:
         make -j2
         make check
         
-    - name: Deploy WiRedPanda binary
+    - name: Make WiRedPanda package
       run : |
         cp -r examples build\app\release
         cd build\app\release
@@ -99,7 +99,7 @@ jobs:
         cd ..
         ren release wpanda
         
-    - name: Upload WiRedPanda build
+    - name: Deploy
       continue-on-error: true
       uses: actions/upload-artifact@v3
       with:
@@ -119,7 +119,7 @@ jobs:
     - name: Install
       run: brew install qt5 gdb
 
-    - name: Build
+    - name: Build and test
       run: |
         QTDIR="/usr/local/opt/qt5/" && PATH="${QTDIR}/bin:$PATH" && LDFLAGS=-L${QTDIR}/lib && CPPFLAGS=-I${QTDIR}/include;
         mkdir build
